[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/dir_checks.gd" type="Script" id=1]

[node name="DirChecks" type="Node3D"]
script = ExtResource( 1 )

[node name="HeadCheck" type="RayCast3D" parent="."]
enabled = true

[node name="BodyCheck" type="RayCast3D" parent="."]
enabled = true

[node name="FeetCheck" type="RayCast3D" parent="."]
enabled = true
